fix more mobile visible

--- a/sass/_base.sass
+++ b/sass/_base.sass
@@ -75,7 +75,7 @@ h2
   main
     margin: 0 auto
     display: grid
-    grid-template-rows: 56px 1fr 60px 170px 30px
+    grid-template-rows: 56px 1fr 60px 160px 30px
     grid-template-columns: .8fr 1fr .8fr
 
   h2
