--- a/sass/_center.sass
+++ b/sass/_center.sass
@@ -46,7 +46,7 @@
     grid-row: 2/3
     grid-column: 1/end
     position: relative
-    margin: 5px auto
+    margin: 5% auto
     display: grid
     grid-template: repeat(20, 15px) / repeat(20, 15px)
     grid-auto-flow: row
