--- a/sass/_header.sass
+++ b/sass/_header.sass
@@ -110,7 +110,7 @@ a
     display: none
 
   .record_mob
-    grid-row: 6/7
+    grid-row: 5/6
     grid-column: 3/4
 
   .mob_rec,
